Added some more questions and began to clean up bad variable names, bad python practices.

--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-Hello World!
+This is my first attempt at a valid github project.
+
+I won't apologize for some of these; I wrote them as
+I was developing as a hacker. The amount of skill
+applied to these problems varies greatly.
