--- a/README
+++ b/README
@@ -1,5 +1,3 @@
-This is my first attempt at a valid github project.
+This is my own fun little project. I mostly use it to learn languages (Python, to master JS, Go, Ruby, ...)
 
-I won't apologize for some of these; I wrote them as
-I was developing as a hacker. The amount of skill
-applied to these problems varies greatly.
+I won't apologize for some of these; I wrote them as I was developing as a hacker. The amount of skill applied to these problems varies greatly.
