Huge js reorg via node, fixed small python style thing

--- a/js/README
+++ b/js/README
@@ -1,3 +1,4 @@
 Install node (v0.4.9) at https://github.com/joyent/node/wiki/Installation
 
-To run a question, simply execute "node no<problem number>.js"
+To run a script, simply execute "no<problem number>.js" or "./no<problem number>.js" on some systems.
+The shebang at the top is conditional on your node install.
