--- a/js/README
+++ b/js/README
@@ -1,6 +1,9 @@
 Install node (v0.4.9) at https://github.com/joyent/node/wiki/Installation
 
 To run a script, simply execute "no<problem number>.js" or "./no<problem number>.js" on some systems.
+For problems that require problem data, the command must be run from the directory in which the script lives;
+I'll be changing this stupid dependency at some point.
+
 The shebang at the top should work with node installed.
 
 Install bigint
