Removed local install dependencies, changed setup script to install necessary node plugins

--- a/README
+++ b/README
@@ -2,4 +2,4 @@ This is my own fun little project. I mostly use it to learn languages (Python, t
 
 I won't apologize for some of these; I wrote them as I was developing as a hacker. The amount of skill applied to these problems varies greatly.
 
-To get problem_data importing to work, please run set_paths (from any directory you like) to create the proper files. After running, be sure to source your ~/.bash_profle
+To get problem_data importing to work, please run set_paths (from any directory you like) to create the proper files. After running, be sure to source your ~/.bash_profile
